--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,15 @@ rvm:
   - 2.0
   - 2.1
   - 2.2
+  - 2.3
+  - 2.4
+  - 2.5
   - ruby-head
   - jruby
   - jruby-head
+
+before_install:
+  - which bundle >/dev/null 2>&1 || gem install bundler
 
 matrix:
   allow_failures:
